Index "Terminado", responsividade em andamento

--- a/public/index.html
+++ b/public/index.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>AquaTech | Página Inicial</title>
-
-    <script src="./js/sessao.js"></script>
-
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-</head>
-
-<body>
-    <div class="header">
-      <div class="container">
-        <h1 class="titulo">AquaTech</h1>
-        <ul class="navbar">
-          <li class="agora">
-            <a href="#">Inicial</a>
-          </li>
-          <li>
-            <a href="simulador.html">Simulador</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="login.html">Login</a>
-          </li>
-          <li>
-            <a href="cadastro.html">Cadastro</a>
-          </li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="CSS/index.css">
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="./assets/imagem/logo.png" alt="">
+      </div>
+      <div class="links">
+        <ul>
+          <li><a id="ativo" class="header_botao" href="">home</a></li>
+          <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
+          <li><a class="header_botao" href="login.html">Entrar</a></li>
         </ul>
       </div>
-    </div>
-  
-    <div class="banner">
-      <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
-      </div>
-    </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
-      </div>
-    </div>
-  </body>
+    </header>
 
+    <main>
+        <div class="Sobre">
+            <div class="Sobre_container">
+                <div class="Sobre_Conteudo">
+                    <div class="Texto_Sobre">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                    </div>
+                    <div class="Texto_Sobre">
+                        <img src="./assets/imagem/image.png" alt="">
+                    </div>
+                </div>
+                <div class="Sobre_Conteudo">
+                    <div class="Texto_Sobre">
+                        <img src="./assets/imagem/image.png" alt="">
+                    </div>
+                    <div class="Texto_Sobre">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    </div>
+                </div>
+              </div>
+        </div>
+
+        <div class="Contato">
+                <h1>
+                    Entre em contato
+                </h1>
+
+            <div class="Contato_conteudo">
+                <div class="Sessao_esquerda">
+                    <p>2ads logaritmos-sptech@</p>
+                    <img src="./assets/imagem/contato_imagem.png" alt="">
+                </div>
+                <div class="Sessao_direita">
+                    <div>
+                        <input type="text" name="" id="">
+                        <input type="text" name="" id="">
+                        <input type="text" name="" id="">
+                    </div>
+                    <input type="text" name="" id="">
+                    <button>Enviar</button>
+            </div>
+    </div>
+    </div>
+    </main>
+
+    <footer>
+        <div>
+            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+        </div>
+    </footer>
+  </body>
 </html>
