--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -6,38 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>AquaTech | Cadastro</title>
+  <title>Logaritimos | Cadastro</title>
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./css/estilo.css" />
-  <link rel="icon" href="./assets/icon/favicon2.ico" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="stylesheet" href="./CSS/cadastro.css" />
 </head>
 
 <body onload="listar()">
-  <!--header inicio-->
-  <div class="header">
-    <div class="container">
-      <h1 class="titulo">AquaTech</h1>
-      <ul class="navbar">
-        <li>
-          <a href="index.html">Inicial</a>
-        </li>
-        <li>
-          <a href="simulador.html">Simulador</a>
-        </li>
-        <li>|</li>
-        <li>
-          <a href="login.html">Login</a>
-        </li>
-        <li class="agora">
-          <a href="#">Cadastro</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!--header fim-->
+    <!--Header-->
+
+   <header>
+      <div>
+        <img src="./assets/imagem/logo.png" alt="">
+      </div>
+      <div class="links">
+        <ul>
+          <li><a id="ativo" class="header_botao" href="">Home</a></li>
+            <li >|</li>
+          <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
+          <li><a class="header_botao" href="login.html">Entrar</a></li>
+        </ul>
+      </div>
+    </header>
 
   <div class="login">
     <div class="alerta_erro">
@@ -84,14 +75,14 @@
     </div>
   </div>
 
-  <!--footer inicio-->
-  <div class="footer">
-    <div class="container">
-      <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-      <span class="version">v1.0.0</span>
-    </div>
-  </div>
-  <!--footer fim-->
+   <!--footer inicio-->
+    <footer>
+        <div>
+            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+        </div>
+    </footer>
+  </body>
+    <!--footer fim-->
 </body>
 
 </html>
