--- a/public/login.html
+++ b/public/login.html
@@ -6,78 +6,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <title>AquaTech | Login</title>
 
     <script src="./js/sessao.js"></script>
 
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="./CSS/login.css">
+
 </head>
 
 <body>
 
     <!--Header-->
 
-    <div class="header">
-        <div class="container">
-            <h1 class="titulo">AquaTech</h1>
-            <ul class="navbar">
-                <li>
-                    <a href="index.html">Inicial</a>
-                </li>
-                <li>
-                    <a href="simulador.html">Simulador</a>
-                </li>
-                <li>|</li>
-                <li class="agora">
-                    <a href="#">Login</a>
-                </li>
-                <li>
-                    <a href="cadastro.html">Cadastro</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+   <header>
+      <div>
+        <img src="./assets/imagem/logo.png" alt="">
+      </div>
+      <div class="links">
+        <ul>
+          <li><a id="ativo" class="header_botao" href="">Home</a></li>
+            <li >|</li>
+          <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
+          <li><a class="header_botao" href="login.html">Entrar</a></li>
+        </ul>
+      </div>
+    </header>
 
 
     <div class="login">
-        <div class="alerta_erro">
+        <!-- <div class="alerta_erro">
             <div class="card_erro" id="cardErro">
                 <span id="mensagem_erro"></span>
             </div>
-        </div>
+        </div> -->
         <div class="container">
-            <div class="card card-login">
-                <h2>Olá de volta!</h2>
+            <div class="parte1">
+                <h2>Bem vindo(a) de volta!</h2>
+                <p>Cadastre-se mantenha-se 
+                    conectado conosco</p>
+                    <button ><a href="cadastro.html">Cadastro</a>
+                        
+                    </button>
+            </div>
+            <div class="card-login">
+                <h1>Entrar</h1>
+                
                 <div class="formulario">
+
                     <div class="campo">
-                        <span>E-mail:</span>
-                        <input id="email_input" type="text" placeholder="Login">
+                        <img src="" alt="">
+                        <input id="email_input" type="text" placeholder="Email">
                     </div>
+
                     <div class="campo">
-                        <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******">
+                        <img src="" alt="">                        
+                        <input id="senha_input" type="password" placeholder="Senha">
                     </div>
-                    <button class="botao" onclick="entrar()">Entrar</button>
+
+                    <button class="botao" onclick="entrar()">Login</button>
+
                 </div>
 
-                <div id="div_aguardar" class="loading-div">
-                    <img src="./assets/circle-loading.gif" id="loading-gif">
-                </div>
-
-                <div id="div_erros_login"></div>
+                <div id="div_erros_login">MENSAGEM DE ERRO</div>
             </div>
         </div>
     </div>
 
     <!--footer inicio-->
-    <div class="footer">
-        <div class="container">
-            <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-            <span class="version">v1.0.0</span>
+     <footer>
+        <div>
+            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
         </div>
-    </div>
+    </footer>
+  </body>
     <!--footer fim-->
 
 </body>
