Adiciona versão Wireframe telas login/cadastro/cadastro2

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="links">
         <ul>
-          <li><a id="ativo" class="header_botao" href="">home</a></li>
+          <li><a id="ativo" class="header_botao" href="index.html">home</a></li>
           <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
           <li><a class="header_botao" href="login.html">Entrar</a></li>
         </ul>
