--- a/public/cadastro2.html
+++ b/public/cadastro2.html
@@ -10,7 +10,7 @@
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./CSS/cadastro.css" />
+  <link rel="stylesheet" href="./CSS/cadastro2.css" />
 </head>
 
 <body onload="listar()">
@@ -23,7 +23,7 @@
       <div class="links">
         <ul>
           <li><a id="ativo" class="header_botao" href="index.html">Home</a></li>
-            <li >|</li>
+          <li >|</li>
           <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
           <li><a class="header_botao" href="login.html">Entrar</a></li>
         </ul>
@@ -48,36 +48,29 @@
         <h2>Bem-vindo!</h2>
 
         <div class="formulario">
-          <!--
-                         Para inserir mais um campo, copie uma das inputs abaixo.
-                         Assim que inserir vá para o script abaixo.
-                     -->
-          <div class="campo">
-            <input id="codigo_input" type="text" placeholder="Razão Social" />
+
+          <div class="campo1">
+            <input id="cep" type="text" placeholder="CEP" />
+            <input id="uf" type="text" placeholder="UF" />
           </div>
 
-          <div class="campo">
-            <input id="nome_input" type="text" placeholder="CNPJ" />
+          <div class="campo2">
+            <input id="email_input" type="text" placeholder="Cidade" />
+            <input id="senha_input" type="text" placeholder="Bairro" />
           </div>
 
-          <div class="campo">
-            <input id="email_input" type="text" placeholder="Email" />
+          <div class="campo3">
+            <input id="complemento" type="text" placeholder="Complemento" />
           </div>
 
-          <div class="campo">
-            <input id="senha_input" type="password" placeholder="Senha" />
+          <div class="campo1">
+            <input id="logradouro" type="text" placeholder="Logradouro" />
+            <input id="numero" type="text" placeholder="Número" />
           </div>
 
-          <div class="campo">
-            <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
-          </div>
 
-          <div class="indicador">
-           <p id="etapa">Etapa 1 de 2</p>
-          </div>
-
-          <!-- <button class="botao" onclick="cadastrar()">Cadastrar</button> -->
-          <button><a href="cadastro2.html">Próximo</a></button>
+          <button class="botao" onclick="cadastrar()">Finalizar</button>
+          <!-- <button><a href="cadastro2.html">Finalizar</a></button> -->
         </div>
 
         <div id="div_erros_login"></div>
