--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -10,102 +10,160 @@
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./CSS/cadastro.css" />
+  <link rel="stylesheet" href="./CSS/teste.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body onload="listar()">
-    <!--Header-->
+  <!--Header-->
 
-   <header>
-      <div>
-        <img src="./assets/imagem/logo.png" alt="">
-      </div>
-      <div class="links">
-        <ul>
-          <li><a id="ativo" class="header_botao" href="index.html">Home</a></li>
-            <li >|</li>
-          <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
-          <li><a class="header_botao" href="login.html">Entrar</a></li>
-        </ul>
-      </div>
-    </header>
+  <header>
+    <div>
+      <img src="./assets/imagem/logo.png" alt="">
+    </div>
+    <div class="links">
+      <ul>
+        <li><a id="ativo" class="header_botao" href="index.html">Home</a></li>
+        <li>|</li>
+        <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
+        <li><a class="header_botao" href="login.html">Entrar</a></li>
+      </ul>
+    </div>
+  </header>
 
   <div class="cadastro">
-    <!-- <div class="alerta_erro">
-      <div class="card_erro" id="cardErro">
-        <span id="mensagem_erro"></span>
-      </div>
-    </div> -->
+
     <div class="container">
 
       <div class="parte1">
-         <h2>Boas Vindas!</h2>
-         <p>Entre e desfrute de nossa solução</p>
-         <button ><a href="login.html">Login</a></button>
+        <h2>Boas Vindas!</h2>
+        <p>Entre e desfrute de nossa solução</p>
+        <button><a href="login.html">Login</a></button>
       </div>
 
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
 
         <div class="formulario">
-          <!--
-                         Para inserir mais um campo, copie uma das inputs abaixo.
-                         Assim que inserir vá para o script abaixo.
-                     -->
-          <div class="campo">
-            <input id="codigo_input" type="text" placeholder="Razão Social" />
+
+          <!-- CADASTRO 1 -->
+          <div class="cadastro1">
+            <div class="campo">
+              <input id="razaoSocial" type="text" placeholder="Razão Social" />
+              <span id="erro-razao" class="msg-erro">Informe a razão social</span>
+            </div>
+
+            <div class="campo">
+              <input id="cnpj" type="text" placeholder="CNPJ" />
+              <span id="erro-cnpj" class="msg-erro">CNPJ inválido</span>
+            </div>
+
+            <div class="campo">
+              <input id="email_input" type="text" placeholder="Email" />
+              <span id="erro-email" class="msg-erro">Digite um email válido</span>
+            </div>
+
+            <div class="campo" style="position: relative;">
+              <input id="senha_input" type="password" placeholder="Senha" />
+              <i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
+                         cursor: pointer; font-size: 18px; color: #555;"></i>
+              <span id="erro-senha" class="msg-erro">
+                A senha deve ter 8+ caracteres, maiúscula, minúscula, número e símbolo
+              </span>
+            </div>
+
+            <div class="campo" style="position: relative;">
+              <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
+              <i id="toggleConfirmacao" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
+                         cursor: pointer; font-size: 18px; color: #555;"></i>
+              <span id="erro-confirmar" class="msg-erro">As senhas não coincidem</span>
+            </div>
+
+            <div class="indicador">
+              <p id="etapa" style="color: #858484;">Etapa 1 de 2</p>
+              <span id="erro-cep" class="msg-erro">CEP inválido</span>
+            </div>
+
+            <div>
+              <button class="botaoGeral" type="button" onclick="irParaCadastro2()">Próximo</button>
+            </div>
+
+          </div>
+          <!-- CADASTRO 2 -->
+          <div class="cadastro2" style="display:none;">
+
+            <div class="voltar" style="margin-bottom: 10px; cursor: pointer;">
+              <!--<i class="fa-solid fa-arrow-left" onclick="voltarParaCadastro1()"></i> -->
+            </div>
+
+            <div class="campo">
+              <input id="cep" type="text" placeholder="CEP" />
+              <input id="uf" type="text" placeholder="UF" />
+            </div>
+
+            <div class="campo">
+              <input id="cidade" type="text" placeholder="Cidade" />
+              <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
+            </div>
+
+            <div class="campo">
+              <input id="bairro" type="text" placeholder="Bairro" />
+              <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
+            </div>
+
+            <div class="campo">
+              <input id="logradouro" type="text" placeholder="Logradouro" />
+              <input id="numero" type="text" placeholder="Número" />
+            </div>
+
+            <div class="campo">
+              <input id="complemento" type="text" placeholder="Complemento" />
+            </div>
+
+            <div>
+              <button class="botaoGeral" type="button" onclick="finalizarCadastro()">Finalizar</button>
+            </div>
           </div>
 
-          <div class="campo">
-            <input id="nome_input" type="text" placeholder="CNPJ" />
-          </div>
 
-          <div class="campo">
-            <input id="email_input" type="text" placeholder="Email" />
-          </div>
-
-          <div class="campo">
-            <input id="senha_input" type="password" placeholder="Senha" />
-          </div>
-
-          <div class="campo">
-            <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
-          </div>
-
-          <div class="indicador">
-           <p id="etapa">Etapa 1 de 2</p>
-          </div>
-
-          <!-- <button class="botao" onclick="cadastrar()">Cadastrar</button> -->
-          <button><a href="cadastro2.html">Próximo</a></button>
         </div>
 
-        <div id="div_erros_login"></div>
       </div>
-    </div>
+
+    </div>,
+
   </div>
 
-   <!--footer inicio-->
-    <footer>
-        <div>
-            <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
-        </div>
-    </footer>
-  </body>
-    <!--footer fim-->
+  <!--footer inicio-->
+  <footer>
+    <div>
+      <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
+    </div>
+  </footer>
+  <!--footer fim-->
+
+  <script src="./js/validacaoCadastroLogin.js"></script>
 </body>
 
 </html>
 
 <script>
 
+
+
   // Array para armazenar empresas cadastradas para validação de código de ativação 
   let listaEmpresasCadastradas = [];
+
+  // Voltar para a etapa 1 sem perder dados
+  function voltarParaCadastro1() {
+    document.querySelector(".cadastro2").style.display = "none";
+    document.querySelector(".cadastro1").style.display = "flex";
+  }
 
   function cadastrar() {
     // aguardar();
 
-    //Recupere o valor da nova input pelo nome do id
+    // Recupere o valor da nova input pelo nome do id
     // Agora vá para o método fetch logo abaixo
     var nomeVar = nome_input.value;
     var emailVar = email_input.value;
@@ -210,4 +268,62 @@
   function sumirMensagem() {
     cardErro.style.display = "none";
   }
+
+
+
+
+
+  // --- BOTÕES --- //
+  function irParaCadastro2() {
+    if (validarFormularioEtapa1()) {
+      document.querySelector(".cadastro1").style.display = "none";
+      document.querySelector(".cadastro2").style.display = "block";
+
+      document.querySelector(".voltar").style.display = "block";
+    }
+  }
+
+
+  // Esconder e aparecer senha 
+  const senhaInput = document.getElementById("senha_input");
+  const toggleSenha = document.getElementById("toggleSenha");
+
+  toggleSenha.addEventListener("click", () => {
+    if (senhaInput.type === "password") {
+      senhaInput.type = "text";
+      toggleSenha.classList.remove("fa-eye-slash");
+      toggleSenha.classList.add("fa-eye");
+    } else {
+      senhaInput.type = "password";
+      toggleSenha.classList.remove("fa-eye");
+      toggleSenha.classList.add("fa-eye-slash");
+    }
+  });
+
+  // Esconder e aparecer senha (Confirmacao)
+  const confirmacaoInput = document.getElementById("confirmacao_senha_input");
+  const toggleConfirmacao = document.getElementById("toggleConfirmacao");
+
+  toggleConfirmacao.addEventListener("click", () => {
+    if (confirmacaoInput.type === "password") {
+      confirmacaoInput.type = "text";
+      toggleConfirmacao.classList.remove("fa-eye-slash");
+      toggleConfirmacao.classList.add("fa-eye");
+    } else {
+      confirmacaoInput.type = "password";
+      toggleConfirmacao.classList.remove("fa-eye");
+      toggleConfirmacao.classList.add("fa-eye-slash");
+    }
+  });
+
+  function finalizarCadastro() {
+    if (validarFormularioEtapa2()) {
+      alert("Cadastro efetuado com sucesso!");
+
+      setTimeout(() => {
+        window.location.href = "login.html";
+      }, 100);
+    }
+  }
+
 </script>
