Adicionado a área de quem somos no arquivo index_html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/quemsomos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -55,7 +56,103 @@
           </div>
       </div>
 
-        <div class="Equipe">
+        <div class="">
+          <section id="quemsomos" class="quemsomos">
+        <h1 class="title">Quem Somos?</h1>
+        <div class="cardquem">
+            <div class="rowdivision">
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/beatrizPina.jpeg" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Beatriz Pina</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/beatriz-pina-78958a29b/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/PinaBeatriz"><img src="./assets/imagem/github.png" alt=""></a></button>
+                    </div>
+                </div>
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/EnzoFreitas.jpeg" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Enzo de Freitas</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/enzo-de-freitas-8553b6372/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/EnzodeFreitas"><img src="./assets/imagem/github.png" alt=""></a></button>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="rowdivision">
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/erickSilva.jpeg" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Erick Silva</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/erick-silva-1078ab268/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/erickDavi097"><img src="./assets/imagem/github.png" alt=""></a></button>
+                    </div>
+                </div>
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/guiDias.jpeg" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Guilherme Dias</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/guilherme-dias-sp/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/Gui-DoSantos"><img src="./assets/imagem/github.png" alt=""></a></button>
+                    </div>
+                </div>
+            </div>
+            <div class="rowdivision">
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/luizCesar.png" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Luiz César</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/erick-silva-1078ab268/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/lcesar03"><img src="./assets/imagem/github.png" alt=""></a></button>
+                    </div>
+                </div>
+                <div class="quemsomos-container">
+                    <div class="img-quemsomos-container">
+                        <img src="./assets/imagem/rafaelQueiroz.jpeg" alt="Foto de perfil">
+                    </div>
+                    <p class="full-name">Rafael Queiroz</p>
+                    <p class="role">Funcionario de TI</p>
+                    <p class="description">
+                        Funcionarios da Logaritmos focados em desempenhar e inovar em soluções tecnológicas.
+                    </p>
+                    <div class="social-container">
+                        <button><a href="https://www.linkedin.com/in/rafael-queiroz-taneguti/"><img src="./assets/imagem/linkedin.png" alt=""></a></button>
+                        <button><a href="https://github.com/rtaneguti"><img src="./assets/imagem//github.png" alt=""></a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
         </div>
