--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -10,8 +10,10 @@
 
   <script src="./js/sessao.js"></script>
 
-  <link rel="stylesheet" href="./CSS/teste.css" />
+  <link rel="stylesheet" href="./CSS/cadastro.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body onload="listar()">
@@ -36,13 +38,13 @@
     <div class="container">
 
       <div class="parte1">
-        <h2>Boas Vindas!</h2>
+        <h2>Bem vindo(a)!</h2>
         <p>Entre e desfrute de nossa solução</p>
         <button><a href="login.html">Login</a></button>
       </div>
 
-      <div class="card card-cadastro">
-        <h2>Bem-vindo!</h2>
+      <div class=" card-cadastro">
+        <h2>Cadastre-se</h2>
 
         <div class="formulario">
 
@@ -65,7 +67,7 @@
 
             <div class="campo" style="position: relative;">
               <input id="senha_input" type="password" placeholder="Senha" />
-              <i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
+              <i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 45%; transform: translateY(-50%);
                          cursor: pointer; font-size: 18px; color: #555;"></i>
               <span id="erro-senha" class="msg-erro">
                 A senha deve ter 8+ caracteres, maiúscula, minúscula, número e símbolo
@@ -73,64 +75,74 @@
             </div>
 
             <div class="campo" style="position: relative;">
-              <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
-              <i id="toggleConfirmacao" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
-                         cursor: pointer; font-size: 18px; color: #555;"></i>
+                 <input id="confirmacao_senha_input" type="password" placeholder="Confirmar Senha" />
+                 <i id="toggleConfirmacao" class="fa-solid fa-eye-slash" 
+                   style="position: absolute; right: 5px; top: 45%; transform: translateY(-50%);
+                    cursor: pointer; font-size: 18px; color: #555;">
+                 </i>
+              
               <span id="erro-confirmar" class="msg-erro">As senhas não coincidem</span>
             </div>
 
             <div class="indicador">
-              <p id="etapa" style="color: #858484;">Etapa 1 de 2</p>
-              <span id="erro-cep" class="msg-erro">CEP inválido</span>
+              <p id="etapa" style="color: #00283a;">Etapa 1 de 2</p>
+               <button class="botaoGeral" type="button" onclick="irParaCadastro2()">Próximo</button>
             </div>
 
-            <div>
-              <button class="botaoGeral" type="button" onclick="irParaCadastro2()">Próximo</button>
-            </div>
 
           </div>
           <!-- CADASTRO 2 -->
-          <div class="cadastro2" style="display:none;">
+          <div class="cadastro2" style="display:none; width: 100%; flex-direction: column;">
+  
+  <div class="voltar" style="margin-bottom: 10px; cursor: pointer;"></div>
 
-            <div class="voltar" style="margin-bottom: 10px; cursor: pointer;">
-              <!--<i class="fa-solid fa-arrow-left" onclick="voltarParaCadastro1()"></i> -->
-            </div>
+  <!-- Linha CEP + UF -->
+  <div class="linha-campos">
+    <div class="campo">
+      <input id="cep" type="text" placeholder="CEP" />
+      <span id="erro-cep" class="msg-erro">CEP inválido</span>
+    </div>
+    <div class="campo">
+      <input id="uf" type="text" placeholder="UF" />
+    </div>
+  </div>
 
-            <div class="campo">
-              <input id="cep" type="text" placeholder="CEP" />
-              <input id="uf" type="text" placeholder="UF" />
-            </div>
+  <div class="campo">
+    <input id="cidade" type="text" placeholder="Cidade" />
+    <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
+  </div>
 
-            <div class="campo">
-              <input id="cidade" type="text" placeholder="Cidade" />
-              <span id="erro-cidade" class="msg-erro">Informe a cidade</span>
-            </div>
+  <div class="campo">
+    <input id="bairro" type="text" placeholder="Bairro" />
+    <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
+  </div>
 
-            <div class="campo">
-              <input id="bairro" type="text" placeholder="Bairro" />
-              <span id="erro-bairro" class="msg-erro">Informe o bairro</span>
-            </div>
+  <div class="linha-campos">
+    <div class="campo">
+      <input id="logradouro" type="text" placeholder="Logradouro" />
+    </div>
+    <div class="campo">
+      <input id="numero" type="text" placeholder="Número" />
+    </div>
+  </div>
 
-            <div class="campo">
-              <input id="logradouro" type="text" placeholder="Logradouro" />
-              <input id="numero" type="text" placeholder="Número" />
-            </div>
+  <div class="campo">
+    <input id="complemento" type="text" placeholder="Complemento" />
+  </div>
 
-            <div class="campo">
-              <input id="complemento" type="text" placeholder="Complemento" />
-            </div>
+  <div class="botao-final">
+    <button class="botaoGeral" type="button" onclick="finalizarCadastro()">Finalizar</button>
+  </div>
+  
+</div>
 
-            <div>
-              <button class="botaoGeral" type="button" onclick="finalizarCadastro()">Finalizar</button>
-            </div>
-          </div>
 
 
         </div>
 
       </div>
 
-    </div>,
+    </div>
 
   </div>
 
