--- a/public/login.html
+++ b/public/login.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="./CSS/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 
 </head>
@@ -27,7 +28,7 @@
         <div class="links">
             <ul>
                 <li><a id="ativo" class="header_botao" href="index.html">Home</a></li>
-                <li>|</li>
+                <li class="header_botao">|</li>
                 <li><a class="header_botao" href="cadastro.html">Cadastro</a></li>
                 <li><a class="header_botao" href="login.html">Entrar</a></li>
             </ul>
@@ -35,20 +36,17 @@
     </header>
 
     <div class="login">
-        <div class="alerta_erro">
+       <div class="alerta_erro">
             <div class="card_erro" id="cardErro">
                 <span id="mensagem_erro"></span>
             </div>
-        </div>
-        <div class="container">
+       </div>
+       <div class="container">
 
             <div class="parte1">
                 <h2>Bem vindo(a) de volta!</h2>
-                <p>Cadastre-se mantenha-se
-                    conectado conosco</p>
-                <button><a href="cadastro.html">Cadastro</a>
-
-                </button>
+                <p>Cadastre-se mantenha-se conectado conosco</p>
+                <button><a href="cadastro.html">Cadastro</a></button>
             </div>
 
             <div class="card-login">
@@ -56,39 +54,39 @@
 
                 <div class="formulario">
 
-                    <div class="campo">
-                        <img src="" alt="">
-                        <input id="email_input" type="text" placeholder="Email"> <br>
-                        <span id="erro_email" style="color: red; font-size: 14px;"></span>
+                    <div class="campo"> 
+                         <img src="" alt=""> 
+                         <input id="email_input" type="text" placeholder="Email"> 
+                         <span id="erro_email" style="color: red; font-size: 14px;"></span> 
+                         <br> 
+                    </div> 
 
-                    </div>
+                   <div class="campo" style="position: relative;"> 
+                         <input id="senha_input" type="password" placeholder="Senha"> 
+                         <!-- /*<i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
+                          cursor: pointer; font-size: 18px; color: #555;"></i>  */ -->
+                        <span id="erro_senha" style="color: red; font-size: 14px;"></span> 
+                        <br>
+                     </div> 
 
-                    <div class="campo" style="position: relative;">
-                        <input id="senha_input" type="password" placeholder="Senha">
-                        <i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
-                         cursor: pointer; font-size: 18px; color: #555;"></i> <br>
-                        <span id="erro_senha" style="color: red; font-size: 14px;"></span>
-                    </div>
-
-                    <button class="botao" onclick="entrar()">Login</button>
+                     <button class="botao" onclick="entrar()">Login</button>
 
                 </div>
-
-                <!--  <div id="div_erros_login">MENSAGEM DE ERRO</div> -->
-            </div>
+                
+                <!-- <div id="div_erros_login">MENSAGEM DE ERRO</div>  -->
+            </div> 
         </div>
     </div>
+
 
     <!--footer inicio-->
     <footer>
         <div>
             <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
         </div>
-    </footer>
+    </footer> 
 </body>
-<!--footer fim-->
 
-</body>
 
 </html>
 
