Pequenas alterações de cores na home e também de tamanho

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <div class="Banner">
         <div class="Banner_container">
           <div>
-            <p>&nbsp;&nbsp;&nbsp;Na vanguarda da inovação, a Logaritmos une visão estratégica e agilidade implacável para alcançar novos horizontes.</p>
+           <!-- <p>&nbsp;&nbsp;&nbsp;Na vanguarda da inovação, a Logaritmos une visão estratégica e agilidade implacável para alcançar novos horizontes.</p>  --> 
           </div>
         </div>
         
