--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="quemsomos-container">
                     <div class="img-quemsomos-container">
-                        <img src="./assets/imagem/guiDias.jpeg" alt="Foto de perfil">
+                        <img src="./assets/imagem/guiDias.jpg" alt="Foto de perfil">
                     </div>
                     <p class="full-name">Guilherme Dias</p>
                     <p class="role">Funcionario de TI</p>
@@ -189,7 +189,6 @@
 
             <div class="Contato_conteudo">
                 <div class="Sessao_esquerda">
-                    <p>2ads logaritmos-sptech@</p>
                     <img src="./assets/imagem/contato_imagem.png" alt="">
                 </div>
                 <div class="Sessao_direita">
