--- a/public/login.html
+++ b/public/login.html
@@ -46,7 +46,8 @@
             <div class="parte1">
                 <h2>Bem vindo(a) de volta!</h2>
                 <p>Cadastre-se mantenha-se conectado conosco</p>
-                <button><a href="cadastro.html">Cadastro</a></button>
+                 <button onclick="window.location.href='cadastro.html'">Cadastro</button>
+                
             </div>
 
             <div class="card-login">
@@ -54,14 +55,19 @@
 
                 <div class="formulario">
 
-                    <div class="campo"> 
-                         <img src="" alt=""> 
+                    <div class="campo" style="position: relative;"> 
+                         <div class="desenho">
+                          <img src="./assets/imagem/email.png" alt="">
+                        </div>
                          <input id="email_input" type="text" placeholder="Email"> 
                          <span id="erro_email" style="color: red; font-size: 14px;"></span> 
                          <br> 
                     </div> 
 
-                   <div class="campo" style="position: relative;"> 
+                   <div class="campo" style="position: relative;">
+                      <div class="desenho">
+                <img src="./assets/imagem/cadeado.png" alt="">
+              </div>
                          <input id="senha_input" type="password" placeholder="Senha"> 
                          <!-- /*<i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
                           cursor: pointer; font-size: 18px; color: #555;"></i>  */ -->
