--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <title>Logaritimos | Login</title>
 
     <script src="./js/sessao.js"></script>
@@ -14,13 +13,10 @@
     <link rel="stylesheet" href="./CSS/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-
 </head>
 
 <body>
     <!--Header-->
-
     <header>
         <div>
             <img src="./assets/imagem/logo.png" alt="">
@@ -36,18 +32,17 @@
     </header>
 
     <div class="login">
-       <div class="alerta_erro">
+        <div class="alerta_erro">
             <div class="card_erro" id="cardErro">
-                <span id="mensagem_erro"></span>
+                <span id="mensagem_erro" style="color: red; font-size: 14px;"></span>
             </div>
-       </div>
-       <div class="container">
+        </div>
+        <div class="container">
 
             <div class="parte1">
                 <h2>Bem vindo(a) de volta!</h2>
                 <p>Cadastre-se mantenha-se conectado conosco</p>
-                 <button onclick="window.location.href='cadastro.html'">Cadastro</button>
-                
+                <button onclick="window.location.href='cadastro.html'">Cadastro</button>
             </div>
 
             <div class="card-login">
@@ -55,142 +50,114 @@
 
                 <div class="formulario">
 
-                    <div class="campo" style="position: relative;"> 
-                         <div class="desenho">
-                          <img src="./assets/imagem/email.png" alt="">
+                    <div class="campo" style="position: relative;">
+                        <div class="desenho">
+                            <img src="./assets/imagem/email.png" alt="">
                         </div>
-                         <input id="email_input" type="text" placeholder="Email"> 
-                         <span id="erro_email" style="color: red; font-size: 14px;"></span> 
-                         <br> 
-                    </div> 
-
-                   <div class="campo" style="position: relative;">
-                      <div class="desenho">
-                <img src="./assets/imagem/cadeado.png" alt="">
-              </div>
-                         <input id="senha_input" type="password" placeholder="Senha"> 
-                         <!-- /*<i id="toggleSenha" class="fa-solid fa-eye-slash" style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
-                          cursor: pointer; font-size: 18px; color: #555;"></i>  */ -->
-                        <span id="erro_senha" style="color: red; font-size: 14px;"></span> 
+                        <input id="email_input" type="text" placeholder="Email">
+                        <span id="erro_email" style="color: red; font-size: 14px;"></span>
                         <br>
-                     </div> 
+                    </div>
 
-                     <button class="botao" onclick="entrar()">Login</button>
+                    <div class="campo" style="position: relative;">
+                        <div class="desenho">
+                            <img src="./assets/imagem/cadeado.png" alt="">
+                        </div>
+                        <input id="senha_input" type="password" placeholder="Senha">
+                        <!-- Ícone de mostrar/ocultar senha (opcional) -->
+                        <!-- <i id="toggleSenha" class="fa-solid fa-eye-slash" 
+                            style="position: absolute; right: 5px; top: 50%; transform: translateY(-50%);
+                            cursor: pointer; font-size: 18px; color: #555;"></i> -->
+                        <span id="erro_senha" style="color: red; font-size: 14px;"></span>
+                        <br>
+                    </div>
 
+                    <button class="botao" onclick="entrar()">Login</button>
                 </div>
-                
-                <!-- <div id="div_erros_login">MENSAGEM DE ERRO</div>  -->
-            </div> 
+            </div>
         </div>
     </div>
-
 
     <!--footer inicio-->
     <footer>
         <div>
             <h1>Logaritmo 2025 - TODOS OS DIREITOS RESERVADOS</h1>
         </div>
-    </footer> 
+    </footer>
 </body>
 
-
 </html>
-
 <script>
+function entrar() {
+    aguardar();
 
+    var emailVar = email_input.value.trim();
+    var senhaVar = senha_input.value.trim();
 
-    function entrar() {
-        aguardar();
+    document.getElementById("erro_email").innerText = "";
+    document.getElementById("erro_senha").innerText = "";
 
-        var emailVar = email_input.value.trim();
-        var senhaVar = senha_input.value.trim();
+    let temErro = false;
 
-        // Limpar mensagens antigas
-        document.getElementById("erro_email").innerText = "";
-        document.getElementById("erro_senha").innerText = "";
+    if (emailVar === "") {
+        document.getElementById("erro_email").innerText = "Email inválido, por favor insira um email!";
+        temErro = true;
+    }
+    if (senhaVar === "") {
+        document.getElementById("erro_senha").innerText = "Senha inválida, por favor insira uma senha!";
+        temErro = true;
+    }
 
-        let temErro = false;
-
-        // Validação de campos vazios
-        if (emailVar === "") {
-            document.getElementById("erro_email").innerText = "Email inválido, por favor insira um email!";
-            temErro = true;
-        }
-        if (senhaVar === "") {
-            document.getElementById("erro_senha").innerText = "Senha inválida, por favor insira uma senha!";
-            temErro = true;
-        }
-
-        if (temErro) {
-            finalizarAguardar();
-            return false;
-        }
-
-        console.log("FORM LOGIN: ", emailVar);
-        console.log("FORM SENHA: ", senhaVar);
-
-        fetch("/usuarios/autenticar", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-                emailServer: emailVar,
-                senhaServer: senhaVar
-            })
-        }).then(function (resposta) {
-            console.log("ESTOU NO THEN DO entrar()!")
-
-            if (resposta.ok) {
-                resposta.json().then(json => {
-                    sessionStorage.EMAIL_USUARIO = json.email;
-                    sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.AQUARIOS = JSON.stringify(json.aquarios);
-
-                    setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
-                    }, 1000);
-                });
-
-            } else {
-                console.log("Houve um erro ao tentar realizar o login!");
-
-                resposta.text().then(texto => {
-                    console.error(texto);
-
-                    // Aqui validamos se foi problema de email ou senha
-                    if (texto.includes("email")) {
-                        document.getElementById("erro_email").innerText = "Email inválido! Email não cadastrado!";
-                    } else if (texto.includes("senha")) {
-                        document.getElementById("erro_senha").innerText = "Senha inválida! Verifique se inseriu corretamente";
-                    }
-
-                    finalizarAguardar();
-                });
-            }
-
-        }).catch(function (erro) {
-            console.log(erro);
-        })
-
+    if (temErro) {
+        finalizarAguardar();
         return false;
     }
+
+    fetch("/empresa/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ emailServer: emailVar, senhaServer: senhaVar })
+    })
+    .then(resposta => {
+        if (resposta.ok) {
+            return resposta.json().then(json => {
+                sessionStorage.EMAIL_EMPRESA = json.email;
+                sessionStorage.RAZAO_SOCIAL = json.razaoSocial;
+                sessionStorage.ID_EMPRESA = json.idEmpresa;
+
+                setTimeout(() => {
+                    window.location = "./dashboard/dashboard.html";
+                }, 1000);
+            });
+        } else {
+            document.getElementById("erro_senha").innerText = "Email ou senha inválidos.";
+            finalizarAguardar();
+        }
+    })
+    .catch(erro => {
+        console.log("Erro no fetch:", erro);
+        document.getElementById("erro_senha").innerText = "Email ou senha inválidos.";
+        finalizarAguardar();
+    });
+
+    return false;
+}
 
     // Esconder e aparecer senha
     const senhaInput = document.getElementById("senha_input");
     const toggleSenha = document.getElementById("toggleSenha");
 
-    toggleSenha.addEventListener("click", () => {
-        if (senhaInput.type === "password") {
-            senhaInput.type = "text";
-            toggleSenha.classList.remove("fa-eye-slash");
-            toggleSenha.classList.add("fa-eye");
-        } else {
-            senhaInput.type = "password";
-            toggleSenha.classList.remove("fa-eye");
-            toggleSenha.classList.add("fa-eye-slash");
-        }
-    });
-
+    if (toggleSenha) {
+        toggleSenha.addEventListener("click", () => {
+            if (senhaInput.type === "password") {
+                senhaInput.type = "text";
+                toggleSenha.classList.remove("fa-eye-slash");
+                toggleSenha.classList.add("fa-eye");
+            } else {
+                senhaInput.type = "password";
+                toggleSenha.classList.remove("fa-eye");
+                toggleSenha.classList.add("fa-eye-slash");
+            }
+        });
+    }
 </script>
