feat(card):adiciona encaminhamento ao icone envelope  em card.html

--- a/public/comparativos.html
+++ b/public/comparativos.html
@@ -123,7 +123,7 @@
     <div class="sidebar">
         <a href="#"><i class="fa-solid fa-user"></i></a>
         <a href="#"><i class="fa-solid fa-clock" onclick="window.location.href='dashboard/dashboard.html'"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope" onclick="window.location.href='../../mensagem.html'"></i></a>
+        <a href="http://localhost:4200"><i class="fa-solid fa-envelope" ></i></a>
         <a href="#" class="active"><i class="fa-solid fa-file-lines"></i></a>
         <a href="#"><i class="fa-solid fa-gear" onclick="window.location.href='../../configuracoes.html'"></i></a>
         <a href="#"><i class="fa-solid fa-right-from-bracket" onclick="logout()"></i></a>
