style: criar página de informações pessoais

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -19,7 +19,7 @@
 
     <!--Sidebar-->
     <div class="sidebar">
-        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="#"><i class="fa-solid fa-user" onclick="window.location.href='../info.html'"></i></a>
         <a href="#"  class="active"><i class="fa-solid fa-clock"></i></a>
         <a href="#"><i class="fa-solid fa-envelope"  onclick="window.location.href='../../mensagem.html'"></i></a>
         <a href="#"><i class="fa-solid fa-file-lines" onclick="window.location.href='../comparativo.html'"></i></a>
