--- a/public/mensagem.html
+++ b/public/mensagem.html
@@ -20,7 +20,7 @@
     <i class="fa-solid fa-user" onclick="window.location.href='./info.html'"></i>
     <i class="fa-solid fa-clock" onclick="window.location.href='./dashboard/dashboard.html'"></i>
     <i class="fa-solid fa-envelope active"></i>
-    <i class="fa-solid fa-file-lines" onclick="window.location.href='/comparativos.html'"></i>
+    <i class="fa-solid fa-file-lines" onclick="window.location.href='/comparativo.html'"></i>
     <i class="fa-solid fa-gear" onclick="window.location.href='/configuracoes.html'"></i>
     <i class="fa-solid fa-right-from-bracket" onclick="logout()"></i>
 </div>
