refactor(ui): corrige código e ajusta estilos

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -28,7 +28,7 @@
     </div>
 
 
-<h2>DASHBOARD</h2>
+<h2 class="titulo">Dashboard</h2>
 <div class="fundo">
 
 <div class="dashboard-container">
@@ -78,15 +78,22 @@
 
 <div class="main-content">
     <div class="charts-container">
-        <h4 class="chart-title">Passageiros por Voos Anualmente</h4>
-        <div class="chart">
-            <canvas id="lineChart" height="70"></canvas>
-        </div>
 
-        <h4 class="chart-title">Tráfego de Passageiros por Mês</h4>
-        <div class="chart">
+        <div class="">
+            <h4 class="chart-title">Passageiros por Voos Anualmente</h4>
+            <div  class="chart">
+            <canvas id="lineChart" height="70"></canvas>
+            </div>
+        </div>
+        
+        <div class="">
+            <h4 class="chart-title">Tráfego de Passageiros por Mês</h4>
+            <div class="chart">
             <canvas id="barChart" height="70"></canvas>
         </div>
+        </div>
+
+        
     </div>
 
     <div class="table-section">
