--- a/public/configuracoes.html
+++ b/public/configuracoes.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-        <span>LOGARITMOS</span>
+        <div>
+            <img src="./assets/imagem/logo.png" alt="">
+        </div>   
     </header>
     <div class="main-content">
     <div class="title">Configurações</div>
@@ -71,12 +73,12 @@
     </details>
     </div>
     <div class="sidebar">
-        <i class="fa-solid fa-user" onclick="window.location.href='./info.html'"></i>
-        <i class="fa-solid fa-clock" onclick="window.location.href='./dashboard/dashboard.html'"></i>
-        <i class="fa-solid fa-envelope" onclick="window.location.href='/mensagem.html'"></i>
-        <i class="fa-solid fa-file-lines" onclick="window.location.href='/comparativos.html'"></i>
-        <i class="fa-solid fa-gear active"></i>
-        <i class="fa-solid fa-right-from-bracket" onclick="logout()"></i>
+        <a href="#"><i class="fa-solid fa-user"></i></a>
+        <a href="#"><i class="fa-solid fa-clock" onclick="window.location.href='dashboard/dashboard.html'"></i></a>
+        <a href="http://localhost:4200"><i class="fa-solid fa-envelope" ></i></a>
+        <a href="#" class="active"><i class="fa-solid fa-file-lines"></i></a>
+        <a href="#"><i class="fa-solid fa-gear" onclick="window.location.href='../../configuracoes.html'"></i></a>
+        <a href="#"><i class="fa-solid fa-right-from-bracket" onclick="logout()"></i></a>
     </div>
 </body>
 
